# drimdev-basic-ai-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  NOTES.md  README.md  SPEC.md  pyproject.toml  run-sandboxed.sh  system_prompt.txt
agent/: __init__.py  cli.py  client.py  config.py  context.py  fallback.py  loop.py  permissions.py  skills.py  subagents.py  tools.py
skills/commit-message/: SKILL.md
tests/: test_agents_md.py  test_context.py  test_fallback.py  test_loop.py  test_permissions.py  test_skills.py  test_subagents.py  test_tools.py
