[tool.poetry]
name = "basic-ai-agent"
version = "0.1.0"
description = "A minimal coding agent built from scratch for learning (see SPEC.md)"
authors = ["Konstantin Chirikhin <chirihin@gmail.com>"]
readme = "README.md"
packages = [{ include = "agent" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.60.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
mypy = "^1.14.0"
pre-commit = "^4.0.0"
pytest = "^8.0.0"

[tool.poetry.scripts]
agent = "agent.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# A pragmatic, readable rule set: pyflakes (F), pycodestyle (E/W),
# isort (I), pyupgrade (UP), and flake8-bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
# Treat our own package as first-party so its imports sort into their own group.
known-first-party = ["agent"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
